--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -716,8 +716,11 @@ pre tt:after {
   width: 1em;
 }
 
-.body-text {
+.spaced-text {
   line-height: 1.75em;
+}
+
+.justified-text {
   text-align: justify;
   text-justify: auto;
 }
